--- a/index.html
+++ b/index.html
@@ -22,9 +22,21 @@
     <link rel="stylesheet" href="./styles/components/footer.css">
     <link rel="stylesheet" href="./styles/utils.css">
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
-
     <title>Web Course Duplicate</title>
     <script src="./src/main.js" type="module"></script>
+    <meta name="description" content="learn frontend web development">
+    <meta name="keywords" content="CSS, JavaScript, ReactJS, NextJS">
+    <meta name="author" content="Andika">
+    <meta property="twitter:image" content="Twitter link preview image URL">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Twitter link preview title">
+    <meta property="twitter:description" content="Twitter link preview description">
+    <meta property="description" content="Search engine description" />
+    <meta property="og:image" content="Link preview image URL">
+    <meta property="og:site_name" content="Link preview site name">
+    <meta property="og:title" content="Link preview title">
+    <meta property="og:description" content="Link preview description" />
+    <meta property="og:url" content="Canonical link preview URL">
   </head>
   <body>
     <header class="header container">
