fixed meta tags

--- a/index.html
+++ b/index.html
@@ -27,16 +27,11 @@
     <meta name="description" content="learn frontend web development">
     <meta name="keywords" content="CSS, JavaScript, ReactJS, NextJS">
     <meta name="author" content="Andika">
-    <meta property="twitter:image" content="Twitter link preview image URL">
+    <meta property="twitter:image" content="https://web-course-dup.vercel.app/public/images/hero.png">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="Twitter link preview title">
-    <meta property="twitter:description" content="Twitter link preview description">
-    <meta property="description" content="Search engine description" />
-    <meta property="og:image" content="Link preview image URL">
-    <meta property="og:site_name" content="Link preview site name">
-    <meta property="og:title" content="Link preview title">
-    <meta property="og:description" content="Link preview description" />
-    <meta property="og:url" content="Canonical link preview URL">
+    <meta property="twitter:title" content="Web Course Dup">
+    <meta property="twitter:description" content="Learning frontend web development">
+    <meta property="description" content="Frontend web development learning purpose" />
   </head>
   <body>
     <header class="header container">
